# ss13VirusHelper

./: CMakeLists.txt
include/: Symptom.hpp  SymptomList.hpp  Virus.hpp  VirusList.hpp  VirusParams.hpp
src/: SymptomList.cpp  Virus.cpp  VirusList.cpp  VirusParams.cpp  main.cpp
virusparser/: .gitignore  infections.txt  main.py
